--- a/templates/template.html
+++ b/templates/template.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="UTF-8">
 <head>
     <title>文件列表</title>
     <style>
-        body { font-family: Arial; margin: 40px; }
+        body {font-family: Arial, fangsong; margin: 40px; }
         .path { color: #666; margin-bottom: 20px; }
         ul { list-style: none; padding: 0; }
         li { padding: 5px 0; }
